# blender-talon-voice-integration

./: .gitignore  CLAUDE.md  README.md  __init__.py  blender-talon-voice.code-workspace  blender.talon  blender_control.py  dev-install.sh  install.sh  talon_blender.code-workspace  test_addon.py  test_blender_control.py  test_connection.py
.github/workflows/: test.yml
.tests/: test_blender_control.py
blender-addon/: LICENSE  README.md  __init__.py  pyproject.toml  run_tests.sh  talon_blender.code-workspace  test_addon.py
talon/: blender.talon  blender_control.py  pyproject.toml  test_blender_control.py
