[project]
name = "talon-blender"
version = "1.0.1"
description = "Blender addon for Talon voice control integration"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "fake-bpy-module-latest",
    "pytest>=8.0.0",
    "pytest-blender>=0.2.0",
]

[tool.pyright]
typeCheckingMode = "basic"
